Make html backbone, add imgs

--- a/index.html
+++ b/index.html
@@ -9,7 +9,32 @@
   </head>
   <body>
     <div class="flexContainer">
-      <div class="cardContainer"></div>
+      <div class="cardContainer">
+        <div class="userCardTop">
+          <div class="userPhoto">
+            <img src="./images/unnamed.png" alt="User Photo" /><img
+              src="./images/star-outline.png"
+              alt="Status"
+            />
+          </div>
+          <div class="userName"><h2>Chum W. Salmon</h2></div>
+          <div class="userSalary"><span>$ 14/hour</span></div>
+        </div>
+        <div class="userCardMain">
+          <div class="userAddress">
+            <h3>Pacofic Ocean, FAO31</h3>
+          </div>
+          <div class="userLocation">
+            <img src="./images/map-marker-outline.png" alt="Map Location" />
+            <span>under water</span>
+          </div>
+        </div>
+        <div class="userCardBottom">
+          <div class="btnViewCV"></div>
+          <div class="btnMkOffer"></div>
+          <div class="userOnlainStatus"></div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
