Add styles for top, main

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
       <div class="cardContainer">
         <div class="userCardTop">
           <div class="userPhoto">
-            <img src="./images/unnamed.png" alt="User Photo" /><img
-              src="./images/star-outline.png"
-              alt="Status"
-            />
+            <img src="./images/unnamed.png" alt="User Photo" />
+          </div>
+          <div class="userStatus">
+            <img src="./images/star-outline.png" alt="Status" />
           </div>
           <div class="userName"><h2>Chum W. Salmon</h2></div>
           <div class="userSalary"><span>$ 14/hour</span></div>
@@ -27,6 +27,12 @@
           <div class="userLocation">
             <img src="./images/map-marker-outline.png" alt="Map Location" />
             <span>under water</span>
+          </div>
+          <div class="userShortInfo">
+            <span
+              >orem ipsum dolor sit amet consectetur adipisicing elit. Beatae,
+              ullam alias sint culpa accusamus voluptate.</span
+            >
           </div>
         </div>
         <div class="userCardBottom">
