Add bottom styles and second card , delete comment lines

--- a/index.html
+++ b/index.html
@@ -17,6 +17,45 @@
           <div class="userStatus">
             <img src="./images/star-outline.png" alt="Status" />
           </div>
+          <div class="userName"><h2>Shrimp Q. Vannamei</h2></div>
+          <div class="userSalary"><span>$ 10/hour</span></div>
+        </div>
+        <div class="userCardMain">
+          <div class="userAddress">
+            <h3>Atlantic Ocean, FAO41</h3>
+          </div>
+          <div class="userLocation">
+            <img src="./images/map-marker-outline.png" alt="Map Location" />
+            <span>under water</span>
+          </div>
+          <div class="userShortInfo">
+            <span
+              >Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae,
+              ullam alias sint culpa accusamus voluptate.Lorem ipsum dolor sit
+              amet consectetur adipisicing elit. Beatae, ullam alias sint culpa
+              accusamus voluptate.</span
+            >
+          </div>
+        </div>
+        <div class="userCardBottom">
+          <a class="btnViewCV" href="#">VIEW CV</a>
+          <a class="btnViewCV" href="#">MAKE OFFER</a>
+          <div class="userOnlainStatus">
+            <img
+              src="./images/checkbox-blank-circle.png"
+              alt="Online Signature"
+            /><span>Online</span>
+          </div>
+        </div>
+      </div>
+      <div class="cardContainer">
+        <div class="userCardTop">
+          <div class="userPhoto">
+            <img src="./images/no-avatar.png" alt="User Photo" />
+          </div>
+          <div class="userStatus">
+            <img src="./images/star-outline (1).png" alt="Status" />
+          </div>
           <div class="userName"><h2>Chum W. Salmon</h2></div>
           <div class="userSalary"><span>$ 14/hour</span></div>
         </div>
@@ -30,15 +69,20 @@
           </div>
           <div class="userShortInfo">
             <span
-              >orem ipsum dolor sit amet consectetur adipisicing elit. Beatae,
+              >Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae,
               ullam alias sint culpa accusamus voluptate.</span
             >
           </div>
         </div>
         <div class="userCardBottom">
-          <div class="btnViewCV"></div>
-          <div class="btnMkOffer"></div>
-          <div class="userOnlainStatus"></div>
+          <a class="btnViewCV" href="#">VIEW CV</a>
+          <a class="btnViewCV" href="#">MAKE OFFER</a>
+          <div class="userOnlainStatus">
+            <img
+              src="./images/checkbox-blank-circle (1).png"
+              alt="Online Signature"
+            /><span>Offline</span>
+          </div>
         </div>
       </div>
     </div>
