--- a/index.html
+++ b/index.html
@@ -5,11 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>User-Card-Flex2</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato&family=Open+Sans+Condensed:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    >
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <div class="flexContainer">
-      <div class="cardContainer">
+      <article class="cardContainer">
         <div class="userCardTop">
           <div class="userPhoto">
             <img src="./images/unnamed.png" alt="User Photo" />
@@ -47,8 +57,8 @@
             /><span>Online</span>
           </div>
         </div>
-      </div>
-      <div class="cardContainer">
+      </article>
+      <article class="cardContainer">
         <div class="userCardTop">
           <div class="userPhoto">
             <img src="./images/no-avatar.png" alt="User Photo" />
@@ -84,7 +94,7 @@
             /><span>Offline</span>
           </div>
         </div>
-      </div>
+      </article>
     </div>
   </body>
 </html>
